--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # Ignora file binario
 FingerPrintSensor.exe
+*.bin
 
 id_ed25519
 id_ed25519.pub
 
 # Ignora file di configurazione VS Code
-.vscode/launch.json
+#.vscode/launch.json
 .vscode/c_cpp_properties.json
